--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-interval": "^2.0.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
